tests/baselines/reference/parserVariableDeclaration1.errors.txt
parserVariableDeclaration1.ts(1,19): error TS2304: Cannot find name 'a'.
parserVariableDeclaration1.ts(2,15): error TS2304: Cannot find name 'b'.
parserVariableDeclaration1.ts(3,12): error TS2304: Cannot find name 'c'.
parserVariableDeclaration1.ts(4,14): error TS2304: Cannot find name 'd'.


==== parserVariableDeclaration1.ts (4 errors) ====
    		var selection = a, 
    		                ~
!!! error TS2304: Cannot find name 'a'.
    			position = b,
    			           ~
!!! error TS2304: Cannot find name 'b'.
    			model = c,
    			        ~
!!! error TS2304: Cannot find name 'c'.
    			support = d;
    			          ~
!!! error TS2304: Cannot find name 'd'.